0.14.1.3 Update -Prevented auto scroll down if chat is too small -Slightly modified mobile styling

--- a/src/pages/styles/inbox.scss
+++ b/src/pages/styles/inbox.scss
@@ -36,7 +36,6 @@
       justify-content: center;
       z-index: 2;
       box-shadow: 0 5px 5px rgba(0, 0, 0, 0.7);
-      background-color: $dark-gray;
       padding: 1em;
       width: 100%;
       font-size: 1rem;
@@ -46,7 +45,6 @@
     &__list {
       gap: 0.5em;
       mask-image: none;
-      background-color: $dark-gray;
       padding: 0;
     }
   }
