--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,13 +11,10 @@
   text-decoration: none;
 }
 
-html {
-  height: -webkit-fill-available;
-}
-
 body {
   background-color: $background-primary;
   min-height: 100vh;
+  min-height: 100svh;
   color: $basic-white;
 }
 
@@ -33,7 +30,7 @@ body {
 .wrapper {
   @include flexcol();
   height: 100dvh;
-  min-height: -webkit-fill-available;
+  height: 100svh;
 }
 
 main {
